src/test/ui/hidden-rt-injection2.stderr
error[E0432]: unresolved import `rt`
  --> $DIR/hidden-rt-injection2.rs:5:9
   |
LL |     use rt;
   |         ^^ no `rt` in the root

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
